@@ -13,7 +13,7 @@ coverage -x [-p] [-L] MODULE.py [ARG1 ARG2 ...]
     Execute the module, passing the given command-line arguments, collecting
     coverage data.  With the -p option, include the machine name and process
     ID in the .coverage file name.  With -L, measure coverage even inside the
-    Python standard library, which isn't done by default.
+    Python installed library, which isn't done by default.
 
 coverage -e
     Erase collected coverage data.
@@ -87,7 +87,7 @@ class CoverageScript:
             '-e': 'erase',
             '-h': 'help',
             '-i': 'ignore-errors',
-            '-L': 'stdlib',
+            '-L': 'pylib',
             '-m': 'show-missing',
             '-p': 'parallel-mode',
             '-r': 'report',
@@ -138,7 +138,7 @@ class CoverageScript:
         # Do something.
         self.coverage = self.covpkg.coverage(
             data_suffix = bool(settings.get('parallel-mode')),
-            cover_stdlib = settings.get('stdlib')
+            cover_pylib = settings.get('pylib')
             )
 
         if settings.get('erase'):
